welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:80: error: Unmatched closing brace '}' ignored here
}
^